--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,15 @@
 
     <header id="logo"><img src=../fotos/logo.jpg alt="" id="imLogo"></header>
 
+    <nav class="contNav">
+        <div class="elementoNav">Club</div>
+        <div class="elementoNav">Primer Equipo</div>
+        <div class="elementoNav">Equipaciones</div>
+        <div class="elementoNav">Abonate</div>
+        <div class="elementoNav">Patrocinadores</div>
+        <div class="elementoNav">Categorias Inferiores</div>
+    </nav><s></s>
+
 
     
 </body>
