index finalizado, politicas finalizadas

--- a/html/index.html
+++ b/html/index.html
@@ -7,11 +7,11 @@
 <body>
 
     
-
+    <header>
     <nav class="contNav">
         <ul id="listaNav">
-            <img src=../fotos/logo.jpg alt="" id="imLogo">
-            <li class="elementoNav" id="clubNav">🡳 Club
+            <img src=../fotos/logo3.png alt="" id="imLogo">
+            <li class="elementoNav" id="clubNav">▾Club
                 <ul class="subMenu" id="submenuClub">
                     <li class="elementoSubMenu">Historia</li>
                     <li class="elementoSubMenu">Estadio</li>
@@ -20,12 +20,15 @@
 
             </li>
 
+            <li class="elementoNav"><b>Inicio</b></li>
+
             <li class="elementoNav">Primer Equipo</li>
             <li class="elementoNav">Equipaciones</li>
             <li class="elementoNav">Abonados</li>
             <li class="elementoNav">Patrocinadores</li>
         </ul>
     </nav>
+    </header>
 
     
         <h1 id="titulo1">Agrupacion Deportiva Alcorcon</h1>
@@ -41,7 +44,7 @@
                 <img src="../fotos/skider2.jpg" alt="" id="tam">
                 <img src="../fotos/slider3.jpg" alt="" id="tam">
                 <img src="../fotos/slider4_1" alt="" id="tam">
-                <img src="../fotos/logo.jpg" alt="" id="tam">
+                <img src="../fotos/logo3.png" alt="" id="tam">
                 <img src="../fotos/slider1.jpg" alt="" id="tam">
 
             </div>
@@ -56,10 +59,17 @@
 
 
     <footer id="idFooter">
+
+        <div>
+            <a href="https://www.facebook.com/AgrupacionDeportivaAlcorcon/?locale=es_ES"><img src="../fotos/facebook.png" alt="" id="iconoF"></a>
+            <a href="https://www.instagram.com/adalcorcon/?hl=es"><img src="../fotos/insta.png" alt="" id="iconoF"></a>
+            <a href="https://x.com/AD_Alcorcon/status/1870900676487991553?mx=2"><img src="../fotos/x.png" alt="" id="iconoF"></a>
+        </div>
+
         <ul class="cLista">
-            <li class="eLista">Aviso legal</li>
-            <li class="eLista">Politica y privacidad</li>
-            <li class="eLista">Terminos y condiciones</li>
+            <li class="eLista" ><a href="../html/politicas.html#avisoLegal">Aviso legal</a></li>
+            <li class="eLista"><a href="../html/politicas.html#politicaPri">Politica y privacidad</a></li>
+            <li class="eLista"><a href="../html/politicas.html#terYCon">Terminos y condiciones</a></li>
         </ul>
     </footer>
 
