--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="../css/index.css">
     <script src="../js/index.js"></script>
 </head>
@@ -13,9 +16,9 @@
             <img src=../fotos/logo3.png alt="" id="imLogo">
             <li class="elementoNav" id="clubNav">▾Club
                 <ul class="subMenu" id="submenuClub">
-                    <li class="elementoSubMenu">Historia</li>
-                    <li class="elementoSubMenu">Estadio</li>
-                    <li class="elementoSubMenu">Noticias</li>
+                    <a href="../html/historia.html"><li class="elementoSubMenu">Historia</li></a>
+                    <a href="../html/estadio.html"><li class="elementoSubMenu">Estadio</li></a>
+                    <a href="../html/noticias.html"><li class="elementoSubMenu">Notícias</li></a>
                 </ul>
 
             </li>
