historia acabada, inicio noticias

--- a/html/estadio.html
+++ b/html/estadio.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/estadio.css">
-    <script src="../estadio.js"></script>
+    <script src="../js/estadio.js"></script>
 </head>
 
 <body>
     <header>
     <nav class="contNav">
         <ul id="listaNav">
-            <img src=../fotos/logo3.png alt="" id="imLogo">
+            <img src=../fotos/logo4.png alt="" id="imLogo">
             <li class="elementoNav" id="clubNav">▾Club
                 <ul class="subMenu" id="submenuClub">
                     <a href="../html/historia.html"><li class="elementoSubMenu">Historia</li></a>
@@ -31,6 +31,8 @@
         </ul>
     </nav>
     </header>
+
+    <div id="main">
 
     <h1 id="tituloEstadio">Estadio Santo Donmingo Alcorcon</h1>
     <br><br>
@@ -100,6 +102,8 @@
 
     <div id="d2">
         <p id="p1">El Estadio Municipal de Santo Domingo es más que un simple campo de fútbol: es un símbolo de la pasión por el deporte en Alcorcón y un lugar lleno de historia y emoción.</p>
+    </div>
+
     </div>
 
 
