--- a/html/index.html
+++ b/html/index.html
@@ -25,10 +25,10 @@
 
             <li class="elementoNav"><b>Inicio</b></li>
 
-            <li class="elementoNav">Primer Equipo</li>
-            <li class="elementoNav">Equipaciones</li>
-            <li class="elementoNav">Abonados</li>
-            <li class="elementoNav">Patrocinadores</li>
+            <li class="elementoNav"><a href="../html/PrimerEquipo.html">Primer Equipo</a></li>
+            <li class="elementoNav"><a href="../html/Equipaciones.html">Equipaciones</a></li>
+            <li class="elementoNav"><a href="../html/Abonados.html">Abonados</a></li>
+            <li class="elementoNav"><a href="../html/Patrocinadores.html">Patrocinadores</a></li>
         </ul>
     </nav>
     </header>
