formulario finalizado, equipaciones finalizadas, php funciona

--- a/html/Abonados.html
+++ b/html/Abonados.html
@@ -54,7 +54,7 @@
                 </div>
             
                 <div class="elementos">
-                    <h2>Niños (Mayores de 64)</h2>
+                    <h2>Mayores (Mayores de 64)</h2>
                     <p><b>Precio abono: </b> 80€, acceso a todos los partidos de liga</p>
                     <p><b>Renovacion: </b>60€, beneficio exclusivo para los mas fiales</p>
                     <p><b>Media temporada: </b>55€, solo la segunda vuelta</p>
@@ -102,7 +102,7 @@
     
             <ul class="cLista">
                 <li class="eLista" ><a href="../html/politicas.html#avisoLegal">Aviso legal</a></li>
-                <li class="eLista"><a href="../html/politicas.html#politicaPri">Politica y privacidad</a></li>
+                <li class="eLista"><a href="../html/politicas.html#politicasPri">Politica y privacidad</a></li>
                 <li class="eLista"><a href="../html/politicas.html#terYCon">Terminos y condiciones</a></li>
             </ul>
         </footer>
