--- a/html/PrimerEquipo.html
+++ b/html/PrimerEquipo.html
@@ -32,7 +32,9 @@
         </nav>
         </header>
 
-
+        <div id="main">
+            
+        </div>
 
 
 
@@ -49,7 +51,7 @@
     
             <ul class="cLista">
                 <li class="eLista" ><a href="../html/politicas.html#avisoLegal">Aviso legal</a></li>
-                <li class="eLista"><a href="../html/politicas.html#politicaPri">Politica y privacidad</a></li>
+                <li class="eLista"><a href="../html/politicas.html#politicasPri">Politica y privacidad</a></li>
                 <li class="eLista"><a href="../html/politicas.html#terYCon">Terminos y condiciones</a></li>
             </ul>
         </footer>
