--- a/html/noticias.html
+++ b/html/noticias.html
@@ -198,7 +198,7 @@
     
             <ul class="cLista">
                 <li class="eLista" ><a href="../html/politicas.html#avisoLegal">Aviso legal</a></li>
-                <li class="eLista"><a href="../html/politicas.html#politicaPri">Politica y privacidad</a></li>
+                <li class="eLista"><a href="../html/politicas.html#politicasPri">Politica y privacidad</a></li>
                 <li class="eLista"><a href="../html/politicas.html#terYCon">Terminos y condiciones</a></li>
             </ul>
         </footer>
