--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" media="screen" href="../css/index.css">
     <script src="../js/index.js"></script>
 </head>
 <body>
