cat inferiores con formulario y php hecho

--- a/html/Equipaciones.html
+++ b/html/Equipaciones.html
@@ -27,6 +27,7 @@
                 <li class="elementoNav"><a href="../html/PrimerEquipo.html">Primer Equipo</a></li>
                 <li class="elementoNav"><b>Equipaciones</b></li>
                 <li class="elementoNav"><a href="../html/Abonados.html">Abonados</a></li>
+                <li class="elementoNav"><a href="../html/CategoriasInferiores.html">Categorias Inferiores</a></li>
                 <li class="elementoNav"><a href="../html/Patrocinadores.html">Patrocinadores</a></li>
             </ul>
         </nav>
