--- a/html/HazteSocio.html
+++ b/html/HazteSocio.html
@@ -10,7 +10,7 @@
 <body>
 
 
-    <form action="formulario.php" method="post">
+    <form action="../php/formulario.php" method="post">
         <p>Nombre</p>
         <input type="text" name="nombre" size="20" required class="inT" id="nom"><br>
 
