--- a/html/politicas.html
+++ b/html/politicas.html
@@ -24,6 +24,7 @@
                 <li class="elementoNav"><a href="../html/PrimerEquipo.html">Primer Equipo</a></li>
                 <li class="elementoNav"><a href="../html/Equipaciones.html">Equipaciones</a></li>
                 <li class="elementoNav"><a href="../html/Abonados.html">Abonados</a></li>
+                <li class="elementoNav"><a href="../html/CategoriasInferiores.html">Categorias Inferiores</a></li>
                 <li class="elementoNav"><a href="../html/Patrocinadores.html">Patrocinadores</a></li>
             </ul>
         </nav>
