--- a/html/Patrocinadores.html
+++ b/html/Patrocinadores.html
@@ -26,6 +26,7 @@
                 <li class="elementoNav"><a href="../html/PrimerEquipo.html">Primer Equipo</a></li>
                 <li class="elementoNav"><a href="../html/Equipaciones.html">Equipaciones</a></li>
                 <li class="elementoNav"><a href="../html/Abonados.html">Abonados</a></li>
+                <li class="elementoNav"><a href="../html/CategoriasInferiores.html">Categorias Inferiores</a></li>
                 <li class="elementoNav"><b>Patrocinadores</b></li>
             </ul>
         </nav>
