cat inferiores tamaño movil

--- a/html/PrimerEquipo.html
+++ b/html/PrimerEquipo.html
@@ -271,7 +271,7 @@
                     </div>
                     <div>
                         <h3 class="num">1</h3> 
-                        <p class="nombres">pablo</p>
+                        <p class="nombres">Paco Fernandez</p>
                     </div>
                     
                 </div>
