--- a/html/Abonados.html
+++ b/html/Abonados.html
@@ -27,7 +27,7 @@
                 <li class="elementoNav"><a href="../html/Equipaciones.html">Equipaciones</a></li>
                 <li class="elementoNav"><b>Abonados</b></li>
                 <li class="elementoNav"><a href="../html/CategoriasInferiores.html">Categorias Inferiores</a></li>
-                <li class="elementoNav"><a href="../html/Patrocinadores.html">Patrocinadores</a></li>
+                <li class="elementoNav"><a href="../html/Conocenos.html">Conocenos</a></li>
             </ul>
         </nav>
         </header>
