--- a/html/Conocenos.html
+++ b/html/Conocenos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/Abonados.css">
-    <script src="../js/Abonados.js"></script>
+    <link rel="stylesheet" href="../css/Conocenos.css">
+    <script src="../js/Conocenos.js"></script>
 </head>
 <body>
     <header></header>
@@ -27,12 +27,51 @@
                 <li class="elementoNav"><a href="../html/Equipaciones.html">Equipaciones</a></li>
                 <li class="elementoNav"><a href="../html/Abonados.html">Abonados</a></li>
                 <li class="elementoNav"><a href="../html/CategoriasInferiores.html">Categorias Inferiores</a></li>
-                <li class="elementoNav"><b>Patrocinadores</b></li>
+                <li class="elementoNav"><b>Conocenos</b></li>
             </ul>
         </nav>
         </header>
 
+        <div class="main">
 
+            <h1 id="h1">Agrupacion Deportiva Alcorcon</h1>
+
+            <p class="texto">Fundado en 1971</p>
+
+            <h2 class="h2">Escudo</h2>
+
+            <div id="logo"><img src="../fotos/logo4.png" alt="" id="tamLogo"></div>
+
+            <h2 class="h2">Mapa del estadio</h2>
+
+            <div><img src="../fotos/estadio4.jpg" alt="" id="tamPlano"></div>
+
+            <h2 class="h2">Estadio</h2>
+
+            <p class="texto">Estadio Municipal Santo Domingo</p>
+
+            <div><img src="../fotos/estadio1.jpg" alt="" id="tamEstadio"></div>
+
+            <h2 class="h2">Ubicacion</h2>
+
+            <p class="texto">📍Avda Estaban Marquez s/n</p>
+
+            <div><img src="../fotos/ubicacion.png" alt="" id="tamUbi"></div>
+
+            <h2 class="h2">Contacto</h2>
+
+            <p class="texto">🔹Telefono: 912233445</p>
+
+            <p class="texto">🔹Fax: 9122334777</p>
+
+            <p class="texto">🔹Correo: adalcorcon@correo.com</p>
+
+
+
+
+
+
+        </div>
 
 
 
