--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
             <li class="elementoNav"><a href="../html/Equipaciones.html">Equipaciones</a></li>
             <li class="elementoNav"><a href="../html/Abonados.html">Abonados</a></li>
             <li class="elementoNav"><a href="../html/CategoriasInferiores.html">Categorias Inferiores</a></li>
-            <li class="elementoNav"><a href="../html/Patrocinadores.html">Patrocinadores</a></li>
+            <li class="elementoNav"><a href="../html/Conocenos.html">Conocenos</a></li>
         </ul>
     </nav>
     </header>
