--- a/html/HazteSocio.html
+++ b/html/HazteSocio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/hazteSocio.css">
+    <script src="../js/hazteSocio.js"></script>
     
 </head>
 <body>
