--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+    <div id="cookie">
+        <p>Este sitio web utiliza cookies, acepta para continuar con la navegacion</p>
+        <button id="boton">Aceptar</button>
+    </div>
+
     <header>
     <nav class="contNav">
         <ul id="listaNav">
